--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
+          <release>8</release>
           <source>8</source>
           <target>8</target>
           <compilerArgs>
